# ribosome_phenotype_classification

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: metadata_MG1655_cam_ribophene.csv  metadata_MG1655_cam_testD.csv  metadata_MG1655_cip_ribophene.csv  metadata_MG1655_cip_testD.csv  metadata_MG1655_gent_ribophene.csv  metadata_MG1655_gent_testD.csv  metadata_clinical_1XEUCAST_testD.csv  metadata_clinical_SRmodel_ribophene.csv  metadata_clinical_SRmodel_testC.csv  metadata_clinical_train_2strain_1X_test_6strain_ribophene.csv
scripts/: generate_local_dataset.py
src/ribophene/: file_io.py  trainer.py
