[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ribosome_phenotype_classification"
dynamic = ["version"]
description = "A package for classifying ribosome phenotypes."
authors = [{ name = "Piers Turner", email = "piers.turner@physics.ox.ac.uk" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"



dependencies = [
    "numpy",
    "pandas",
    "torch",
    "torchvision",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "imgaug",
    "albumentations",
    "tifffile",
    "tqdm",
    "opencv-python",
    "scipy",
    "pathlib",
    "timm",
    "tensorboard",
    "pillow",
    "shap",
    "seaborn",
    "optuna",
    "glob2",
    "plotly"
]

[project.urls]
homepage = "https://github.com/piedrro/ribosome_phenotype_classification"
repository = "https://github.com/piedrro/ribosome_phenotype_classification"
documentation = "https://github.com/piedrro/ribosome_phenotype_classification#readme"
issues = "https://github.com/piedrro/ribosome_phenotype_classification/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "ribophene.__version__" }

[tool.black]
line-length = 79
target-version = ['py39', 'py310']
